--- a/Energy-comp-final.ipynb
+++ b/Energy-comp-final.ipynb
@@ -32,9 +32,7 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "import datetime\n",
-    "import missingno as msno\n",
-    "import plotly.graph_objs as go\n",
-    "import plotly.express as px"
+    "import missingno as msno"
    ]
   }
  ],
